--- a/src/components/Home/FeatureSection/featureSection.module.css
+++ b/src/components/Home/FeatureSection/featureSection.module.css
@@ -1,8 +1,7 @@
 @import "../../../styles/variables.css";
 
 .container {
-  height: 100vh;
-  padding: 110px 48px 0px 48px;
+  padding: 110px 48px 53px 48px;
 
   display: flex;
   flex-direction: column;
@@ -14,6 +13,7 @@
 .item {
   width: 100%;
   padding-bottom: 10px;
+  cursor: pointer;
 
   border-bottom: 1px solid rgba(255, 250, 244, 1);
 }
