--- a/src/pages/Product/product.module.css
+++ b/src/pages/Product/product.module.css
@@ -11,7 +11,7 @@
 
 .navigation {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: 20px;
   z-index: 9999;
 
@@ -95,31 +95,12 @@
 
   position: relative;
   z-index: 8;
-  transition: transform 0.3s ease;
 }
 
-@keyframes slideUp {
-  from {
-    opacity: 0.5;
-    transform: scale(0);
-    transform: translate(200px, -200px);
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
-
-    transform: translateY(160px);
-  }
-}
-
-@keyframes slideDown {
-  from {
-    opacity: 1;
-    transform: translateY(160px);
-  }
-  to {
-    opacity: 0;
-    transform: translateY(300px);
-    transform: scale(2);
-  }
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
