--- a/src/components/Home/AboutUsSection/aboutUsSection.module.css
+++ b/src/components/Home/AboutUsSection/aboutUsSection.module.css
@@ -153,3 +153,50 @@
     transform: translateY(0);
   }
 }
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .container {
+    padding: 10px 20px;
+  }
+
+  .box {
+    margin-top: 120px;
+    text-align: center;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .header {
+    font-size: 36px;
+    line-height: 42px;
+  }
+
+  .sub {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .box_feature {
+    padding: 20px;
+  }
+
+  .list_item {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .scoll {
+    padding: 12px 16px;
+  }
+
+  .item {
+    flex: 1 1 100%;
+    border-left: none;
+    border-top: 1px solid #fffaf4;
+  }
+
+  .line {
+    display: none;
+  }
+}
