--- a/src/components/Home/AboutUsSection/aboutUsSection.module.css
+++ b/src/components/Home/AboutUsSection/aboutUsSection.module.css
@@ -8,6 +8,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 
 .screen {
@@ -30,7 +31,7 @@
   justify-content: space-between;
   gap: 24px;
 
-  animation: slideInleft 0.7s ease 0s;
+  animation: slideInleft 1s ease 0s;
 }
 
 .header {
@@ -51,7 +52,7 @@
   position: absolute;
   width: 100%;
   padding: 23px 48px;
-  z-index: 999;
+  z-index: 2;
   bottom: 0;
   left: 0;
   right: 0;
@@ -86,7 +87,7 @@
   align-items: center;
   gap: 8px;
 
-  animation: slideInBottom 1s ease 0s;
+  opacity: 0;
 
   p {
     font-size: 16px;
@@ -108,32 +109,22 @@
   align-items: start;
   gap: 4px;
   flex: 1;
+
+  opacity: 0;
 }
 
-.header_tiem {
+.header_item {
   font-size: 18px;
   font-weight: 700;
   line-height: 21.6px;
   text-align: left;
 }
 
-.sub_tiem {
+.content_item {
   font-size: 16px;
   font-weight: 400;
   line-height: 19.2px;
   text-align: left;
-}
-
-.item_1 {
-  animation: slideInBottom 1s ease 0.1s;
-}
-
-.item_2 {
-  animation: slideInBottom 1s ease 0.2s;
-}
-
-.item_3 {
-  animation: slideInBottom 1s ease 0.3s;
 }
 
 @keyframes slideInleft {
@@ -145,11 +136,32 @@
   }
 }
 
-@keyframes slideInBottom {
+.action {
+  animation: slideInUp 1s ease;
+  transform: translateY(0);
+  opacity: 1;
+}
+
+@keyframes slideInUp {
   from {
-    transform: translateY(-100%);
+    opacity: 0;
+    transform: translateY(var(--value));
   }
   to {
+    opacity: 1;
     transform: translateY(0);
+  }
+}
+
+.close {
+  animation: close 1s ease;
+}
+
+@keyframes close {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-100px);
   }
 }
