--- a/src/components/Home/ShowcaseSection/showcaseSection.module.css
+++ b/src/components/Home/ShowcaseSection/showcaseSection.module.css
@@ -132,3 +132,13 @@
   left: 0;
   top: 0;
 }
+
+.scrolled {
+  transform: scale(0.2);
+  transition: transform 1s ease-in;
+}
+
+.zoom {
+  transform: scale(1);
+  transition: transform 1s ease-in;
+}
