--- a/src/components/Solution/ProcedureSection/procedureSection.module.css
+++ b/src/components/Solution/ProcedureSection/procedureSection.module.css
@@ -15,17 +15,17 @@
   justify-content: space-between;
   align-items: center;
 
-  h1 {
-    font-size: 56px;
-    font-weight: 500;
-    line-height: 67.2px;
-    letter-spacing: -0.02em;
-    text-align: left;
-  }
-
   span {
     color: rgba(255, 214, 153, 1);
   }
+}
+
+.header_text {
+  font-size: 56px;
+  font-weight: 500;
+  line-height: 67.2px;
+  letter-spacing: -0.02em;
+  text-align: left;
 }
 
 .sub {
@@ -92,7 +92,6 @@
 .box {
   width: 535px;
   height: 100%;
-  border-left: 1px dashed rgba(255, 255, 255, 1);
 
   display: flex;
   justify-content: center;
@@ -103,7 +102,9 @@
 
 .box_content {
   width: 391px;
+}
 
+.container_content {
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -145,4 +146,245 @@
     rgba(255, 255, 255, 0.8) 36.5%,
     rgba(17, 17, 17, 0.4) 100%
   );
+}
+
+.box_line {
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+  border-left: 1px dashed rgba(255, 255, 255, 1);
+}
+
+.box_line_bottom {
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-left: 1px dashed rgba(255, 255, 255, 1);
+}
+
+/* Animation Down */
+
+.action_down {
+  animation: slideBoxDown 1s ease-in;
+}
+
+.action_down_close {
+  animation: slideBoxDownClose 1s ease-in;
+  opacity: 0;
+  transform: translateY(-100px);
+}
+
+@keyframes slideBoxDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideBoxDownClose {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+}
+
+/* Animation Up */
+
+.action_up {
+  animation: slideBoxUp 1s ease-in;
+}
+
+.action_up_close {
+  animation: slideBoxUpClose 1s ease-in;
+  opacity: 0;
+  transform: translateY(100px);
+}
+
+@keyframes slideBoxUp {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideBoxUpClose {
+  100% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Animation Header */
+
+.action_header_start {
+  animation: slideBoxLeft 1s ease;
+}
+
+.action_header_end {
+  animation: slideBoxLeftClose 1s ease;
+  transform: translateX(-100%);
+  opacity: 0;
+}
+
+@keyframes slideBoxLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideBoxLeftClose {
+  100% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+/* Animation border */
+
+.action_border {
+  animation: slideBorder 1s ease-in;
+}
+
+.action_border_close {
+  animation: slideBorderClose 1s ease-in;
+  opacity: 0;
+  height: 0;
+}
+
+@keyframes slideBorder {
+  0% {
+    height: 0;
+    opacity: 0;
+  }
+  100% {
+    height: 100%;
+    opacity: 1;
+  }
+}
+
+@keyframes slideBorderClose {
+  100% {
+    height: 0;
+    opacity: 0;
+  }
+  0% {
+    height: 100%;
+    opacity: 1;
+  }
+}
+
+/* Animation width */
+
+.action_width {
+  animation: slideWidth 1s ease-in;
+}
+
+.action_width_close {
+  animation: slideWidthClose 1s ease-in;
+  width: 50%;
+}
+
+@keyframes slideWidth {
+  0% {
+    width: 50%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes slideWidthClose {
+  100% {
+    width: 50%;
+  }
+  0% {
+    width: 100%;
+  }
+}
+
+/* Animation Opacity */
+
+.action_opacity {
+  animation: slideOpacity 1s ease;
+}
+
+.action_opacity_close {
+  animation: slideOpacityClose 1s ease;
+  opacity: 0;
+}
+
+@keyframes slideOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideOpacityClose {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/* Animation Background */
+
+.action_background {
+  animation: slideBg 1s ease;
+  opacity: 0.5;
+}
+
+.action_background_close {
+  animation: slideBgClose 1s ease;
+}
+
+@keyframes slideBg {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.5;
+  }
+}
+
+@keyframes slideBgClose {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
 }
