--- a/src/components/AboutUs/FormSection/formSection.module.css
+++ b/src/components/AboutUs/FormSection/formSection.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 166px 48px 132px;
   background-image: url(../../../assets/images/bottomCta.png);
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-position-y: 620px;
