--- a/src/components/Home/InteractiveSection/interactiveSection.module.css
+++ b/src/components/Home/InteractiveSection/interactiveSection.module.css
@@ -148,3 +148,106 @@
     width: 100%;
   }
 }
+
+@media (max-width: 1400px) {
+  .container {
+    height: auto;
+  }
+
+  .content {
+    gap: 60px;
+  }
+
+  .content_left {
+    min-width: 45%;
+  }
+
+  .content_right {
+    min-width: 45%;
+  }
+
+  .icon_Arc {
+    right: 100px;
+    left: inherit;
+  }
+}
+
+@media (max-width: 1200px) {
+  .content_left {
+    min-width: 55%;
+  }
+
+  .content_right {
+    min-width: 38%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .content {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    gap: 40px;
+    padding: 48px 48px 0 48px;
+  }
+
+  .header {
+    font-size: 44px;
+  }
+
+  .content_left {
+    transform: scale(0.72);
+  }
+
+  .content_header {
+    text-align: center;
+  }
+
+  .content_sub {
+    text-align: center;
+  }
+
+  .img {
+    width: 280px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    gap: 0;
+  }
+
+  .header {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  .content {
+    gap: 0;
+  }
+
+  .content_header {
+    font-size: 32px;
+  }
+
+  .content_sub {
+    font-size: 12px;
+  }
+
+  .content_left {
+    transform: scale(0.45);
+    height: 500px;
+  }
+
+  .content_right {
+    gap: 24px;
+  }
+
+  .content_box {
+    gap: 0;
+    padding-bottom: 16px;
+  }
+}
