--- a/src/components/Home/AboutUsSection/aboutUsSection.module.css
+++ b/src/components/Home/AboutUsSection/aboutUsSection.module.css
@@ -161,9 +161,8 @@
   }
 
   .box {
-    margin-top: 120px;
+    margin-top: -84px;
     text-align: center;
-    align-items: center;
     padding: 10px;
   }
 
@@ -183,7 +182,6 @@
 
   .list_item {
     flex-direction: column;
-    gap: 20px;
   }
 
   .scoll {
@@ -194,9 +192,36 @@
     flex: 1 1 100%;
     border-left: none;
     border-top: 1px solid #fffaf4;
+    padding: 12px 24px;
   }
 
   .line {
     display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .box {
+    margin-top: -28px;
+  }
+
+  .header {
+    font-size: 24px;
+    line-height: 28px;
+  }
+
+  .sub {
+    font-size: 12px;
+    line-height: 16px;
+    width: 80%;
+  }
+
+  .item {
+    flex: 1 1 100%;
+    border-left: none;
+    border-top: 1px solid #fffaf4;
+    padding: 8px 12px;
+    font-size: 14px;
+    line-height: 18px;
   }
 }
