--- a/src/components/Home/DifferenceSection/differenceSection.module.css
+++ b/src/components/Home/DifferenceSection/differenceSection.module.css
@@ -3,7 +3,6 @@
 .container {
   height: 100vh;
   padding: 190px 48px 114px;
-
   display: flex;
   gap: 205px;
   align-items: center;
@@ -87,4 +86,94 @@
   gap: 30px;
   align-items: start;
   justify-content: space-between;
+}
+
+/* Responsive Styles */
+
+@media (max-width: 1400px) {
+  .container {
+    height: auto;
+  }
+}
+
+@media (max-width: 1200px) {
+  .container {
+    padding: 100px 48px 114px;
+    flex-direction: column;
+    gap: 80px;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 980px) {
+  .container {
+    height: auto;
+    padding: 100px 48px 114px;
+    flex-direction: column;
+    gap: 80px;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .box_left {
+    gap: 30px;
+    align-items: start;
+  }
+
+  .header {
+    font-size: 36px;
+    line-height: 48px;
+    text-align: left;
+  }
+
+  .img {
+    max-height: 633.41px;
+  }
+
+  .box_right {
+    gap: 60px;
+    align-items: center;
+  }
+
+  .content {
+    align-items: end;
+  }
+
+  .sub {
+    flex-direction: row;
+    gap: 30px;
+    text-align: left;
+
+    p {
+      font-size: 16px;
+      line-height: 22.4px;
+    }
+  }
+
+  .list_box {
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  .box {
+    flex-direction: column;
+    gap: 30px;
+    align-items: start;
+  }
+}
+
+@media (max-width: 480px) {
+  .box_right {
+    gap: 16px;
+  }
+
+  .sub {
+    flex-direction: column;
+    gap: 8px;
+
+    p {
+      text-align: justify;
+    }
+  }
 }
