--- a/src/components/Home/MemberSection/memberSection.module.css
+++ b/src/components/Home/MemberSection/memberSection.module.css
@@ -1,12 +1,11 @@
 .container {
   width: 100%;
-  height: 100vh;
-
-  padding: 100px 48px 0 48px;
-
+  height: auto;
+  padding: 100px 48px 100px 48px;
+  justify-content: center;
   display: flex;
   flex-wrap: wrap;
-  gap: 46px;
+  gap: 80px;
 }
 
 .card {
@@ -15,7 +14,6 @@
   padding: 37px 28px;
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.46);
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -94,4 +92,10 @@
   line-height: 24px;
   letter-spacing: -0.02em;
   text-align: left;
+}
+
+@media (max-width: 1440px) {
+  .container {
+    height: auto;
+  }
 }
