--- a/src/components/Footer/FooterTop/footerTop.module.css
+++ b/src/components/Footer/FooterTop/footerTop.module.css
@@ -12,9 +12,9 @@
 }
 
 .header {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 500;
-  line-height: 32px;
+  line-height: 24px;
   text-align: center;
 
   span {
@@ -25,23 +25,23 @@
 .content {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 16px;
-  align-items: center;
   text-align: center;
+  justify-content: center;
 }
 
 .box {
   display: flex;
-  gap: 16px;
-  align-items: center;
+  align-items: start;
+  gap: 32px;
+  transform: translateX(20px);
 }
 
 .browse {
-  font-size: 14px;
-  line-height: 19.2px;
-  text-align: center;
-
+  font-size: 12px;
+  line-height: 14px;
+  text-align: left;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -62,10 +62,9 @@
 }
 
 .contact {
-  font-size: 14px;
-  line-height: 19.2px;
-  text-align: center;
-
+  font-size: 12px;
+  line-height: 14px;
+  text-align: left;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -78,9 +77,12 @@
 }
 
 .btn_scoll {
-  padding: 10px;
+  position: absolute;
+  right: 48px;
+  padding: 8px;
   border: 1px solid var(--color-white);
   border-radius: 50%;
+  transform: translateY(-28px);
 }
 
 /* Responsive Styles */
