--- a/src/components/Home/MemberSection/memberSection.module.css
+++ b/src/components/Home/MemberSection/memberSection.module.css
@@ -124,8 +124,182 @@
   }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1480px) {
   .container {
     height: auto;
+  }
+
+  .card {
+    width: 240px;
+    height: 320px;
+  }
+
+  .card_member {
+    width: 240px;
+    height: 320px;
+    background-size: cover;
+  }
+}
+
+@media (max-width: 1060px) {
+  .container {
+    gap: 60px;
+  }
+
+  .card {
+    width: 240px;
+    height: 320px;
+  }
+
+  .card_member {
+    width: 240px;
+    height: 320px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    gap: 40px;
+  }
+
+  .card {
+    width: 180px;
+    height: 260px;
+    p {
+      font-size: 14px;
+      line-height: 14px;
+    }
+  }
+
+  .header {
+    font-size: 40px;
+    line-height: 44px;
+  }
+
+  .card_member {
+    width: 180px;
+    height: 260px;
+  }
+
+  .box {
+    padding: 8px 10px;
+    gap: 8px;
+  }
+  .content_header {
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  .name {
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  .position {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+
+@media (max-width: 580px) {
+  .card {
+    width: 160px;
+    height: 240px;
+  }
+
+  .card_member {
+    width: 160px;
+    height: 240px;
+  }
+}
+
+@media (max-width: 470px) {
+  .container {
+    gap: 12px;
+    justify-content: space-evenly;
+  }
+
+  .header {
+    font-size: 20px;
+    line-height: 22px;
+  }
+
+  .content_header {
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  .card {
+    width: 100px;
+    height: 144px;
+    padding: 10px 12px;
+    p {
+      font-size: 10px;
+      line-height: 10px;
+    }
+  }
+
+  .card_btn {
+    padding: 8px;
+  }
+
+  .box {
+    padding: 4px 8px;
+  }
+
+  .card_member {
+    width: 102px;
+    height: 144px;
+    padding: 8px;
+  }
+
+  .name {
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  .position {
+    font-size: 12px;
+    line-height: 12px;
+  }
+}
+
+@media (max-width: 320px) {
+  .card {
+    width: 180px;
+    height: 260px;
+    p {
+      font-size: 14px;
+      line-height: 14px;
+    }
+  }
+
+  .header {
+    font-size: 40px;
+    line-height: 44px;
+  }
+
+  .card_member {
+    width: 180px;
+    height: 260px;
+  }
+
+  .box {
+    padding: 8px 10px;
+    gap: 8px;
+  }
+  .content_header {
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  .name {
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  .position {
+    font-size: 14px;
+    line-height: 14px;
   }
 }
