--- a/src/components/Home/ShowcaseSection/showcaseSection.module.css
+++ b/src/components/Home/ShowcaseSection/showcaseSection.module.css
@@ -169,7 +169,7 @@
 
 @media (max-width: 1060px) {
   .content {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 
   .slider {
@@ -196,8 +196,12 @@
 }
 
 @media (max-width: 768px) {
+  .header {
+    font-size: 44px;
+  }
+
   .container {
-    gap: 0;
+    gap: 0px;
   }
 
   .content_img {
@@ -211,16 +215,25 @@
 
 @media (max-width: 480px) {
   .header {
-    font-size: 48px;
+    font-size: 36px;
+    line-height: 0;
+    margin-bottom: -48px;
   }
 
-  .content {
-    gap: 0;
+  .dot {
+    width: 10px;
+    height: 10px;
+  }
+
+  .container {
+    gap: 32px;
+    padding: 116px 24px 0 24px;
   }
 
   .card_header {
     h2 {
       font-size: 24px;
+      line-height: 26px;
     }
 
     p {
