--- a/src/components/Home/FeatureSection/featureSection.module.css
+++ b/src/components/Home/FeatureSection/featureSection.module.css
@@ -1,13 +1,15 @@
 @import "../../../styles/variables.css";
 
 .container {
-  padding: 110px 48px 53px 48px;
+  padding: 48px;
+  margin-top: 60px;
 
   display: flex;
   flex-direction: column;
   gap: 24px;
   justify-content: start;
   align-items: center;
+  overflow: hidden;
 }
 
 .item {
