--- a/src/components/AboutUs/IntroSection/introSection.module.css
+++ b/src/components/AboutUs/IntroSection/introSection.module.css
@@ -1,25 +1,19 @@
 .container {
   width: 100%;
-  height: 100vh;
-
-  background-image: url(../../../assets/images/bgAboutUs.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-position-y: 256px;
+  margin-top: 60px;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .header {
-  padding: 130px 48px;
-
+  padding: 48px;
   display: flex;
   justify-content: space-between;
   align-items: start;
   text-transform: uppercase;
-  overflow: hidden;
 
   h1 {
     font-size: 60px;
@@ -41,8 +35,16 @@
   }
 }
 
+.img {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .content {
-  padding: 100px 48px;
+  padding: 48px;
+  margin-top: 60px;
 
   display: flex;
   justify-content: space-between;
