--- a/src/components/Home/InteractiveSection/interactiveSection.module.css
+++ b/src/components/Home/InteractiveSection/interactiveSection.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
-  height: 100vh;
-  padding: 80px 48px 0 48px;
+  padding: 48px;
+  margin-top: 60px;
 
   display: flex;
   flex-direction: column;
