--- a/src/components/Home/MemberSection/memberSection.module.css
+++ b/src/components/Home/MemberSection/memberSection.module.css
@@ -1,12 +1,13 @@
 .container {
   width: 100%;
-  height: 100vh;
 
-  padding: 100px 48px 0 48px;
+  padding: 48px;
+  margin-top: 60px;
 
   display: flex;
   flex-wrap: wrap;
   gap: 46px;
+  overflow: hidden;
 }
 
 .card {
