--- a/src/components/Solution/ProcedureSection/procedureSection.module.css
+++ b/src/components/Solution/ProcedureSection/procedureSection.module.css
@@ -1,7 +1,8 @@
 .container {
   width: 100%;
-  height: 100vh;
-  padding: 124px 48px;
+  padding: 48px;
+  margin-top: 60px;
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
