--- a/src/pages/Showcase/showcase.module.css
+++ b/src/pages/Showcase/showcase.module.css
@@ -2,11 +2,13 @@
   width: 100%;
   height: 100vh;
   padding: 0 48px;
+
   background-image: url(../../assets/images/light.png);
   background-repeat: no-repeat;
   background-position: top center;
-
   position: relative;
+
+  overflow: hidden;
 }
 
 .header {
