--- a/src/components/Footer/FooterBottom/footerBottom.module.css
+++ b/src/components/Footer/FooterBottom/footerBottom.module.css
@@ -2,63 +2,39 @@
 
 .container_bottom {
   padding-top: 24px;
-  font-size: 12px;
+
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  gap: 24px;
+  justify-content: space-between;
+  align-items: start;
 }
 
 .list_icon {
   display: flex;
   gap: 12px;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 }
 
 .content {
   width: 100%;
+
   display: flex;
-  flex-direction: column;
-  gap: 12px;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  align-items: start;
 
   p {
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 400;
-    line-height: 14px;
-    margin: 0;
+    line-height: 16.8px;
+    text-align: left;
   }
 }
 
 .text {
   display: flex;
-  gap: 24px;
-  justify-content: center;
+  gap: 145px;
+  justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
-}
-
-/* Responsive Styles */
-@media (min-width: 950px) {
-  .container_bottom {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 24px 48px;
-  }
-
-  .content {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    text-align: left;
-  }
-
-  .text {
-    gap: 145px;
-  }
 }
