--- a/src/components/Footer/FooterTop/footerTop.module.css
+++ b/src/components/Footer/FooterTop/footerTop.module.css
@@ -2,20 +2,24 @@
 
 .container_top {
   width: 100%;
-  padding: 24px 16px;
+  padding-bottom: 24px;
+  padding-right: 80px;
   border-bottom: 1px solid var(--color-white);
 
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 16px;
+  align-items: start;
+  justify-content: space-between;
+  position: relative;
 }
 
 .header {
-  font-size: 20px;
+  width: 536px;
+
+  font-size: 36px;
   font-weight: 500;
-  line-height: 24px;
-  text-align: center;
+  line-height: 56px;
+  letter-spacing: -0.01em;
+  text-align: left;
 
   span {
     color: var(--color-beige);
@@ -23,34 +27,39 @@
 }
 
 .content {
-  width: 100%;
   display: flex;
-  flex-direction: row;
-  gap: 16px;
-  text-align: center;
-  justify-content: center;
+  gap: 100px;
+  align-items: start;
+  justify-content: space-between;
 }
 
 .box {
   display: flex;
+  gap: 47px;
+  justify-content: space-between;
   align-items: start;
-  gap: 32px;
-  transform: translateX(20px);
 }
 
 .browse {
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.2px;
   text-align: left;
+
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: start;
 }
 
 .list_browse {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 12px;
+  align-items: start;
+  justify-content: space-between;
+  color: var(--color-beige);
 
   a {
     text-decoration: underline;
@@ -62,66 +71,32 @@
 }
 
 .contact {
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.2px;
   text-align: left;
+
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
+  align-items: start;
+  justify-content: space-between;
 }
 
 .content_contact {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 12px;
+  align-items: start;
+  justify-content: space-between;
 }
 
 .btn_scoll {
   position: absolute;
-  right: 48px;
-  padding: 8px;
+  right: 0;
+  top: 24px;
+  padding: 12px 14px;
   border: 1px solid var(--color-white);
   border-radius: 50%;
   transform: translateY(-28px);
-}
-
-/* Responsive Styles */
-@media (min-width: 768px) {
-  .container_top {
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 24px 48px;
-  }
-
-  .header {
-    width: auto;
-    font-size: 36px;
-    line-height: 56px;
-    text-align: left;
-  }
-
-  .content {
-    width: auto;
-    flex-direction: row;
-    gap: 60px;
-    text-align: left;
-    align-items: baseline;
-  }
-
-  .box {
-    flex-direction: row;
-    gap: 47px;
-    align-items: start;
-  }
-
-  .browse,
-  .contact {
-    font-size: 16px;
-    text-align: left;
-  }
-
-  .list_browse,
-  .content_contact {
-    gap: 12px;
-  }
 }
