--- a/src/pages/Product/product.module.css
+++ b/src/pages/Product/product.module.css
@@ -5,6 +5,7 @@
   background-image: url(../../assets/images/bgProduct.png);
   background-repeat: no-repeat;
   background-position: center;
+  overflow: hidden;
 
   position: relative;
 }
