--- a/src/components/AboutUs/IntroSection/introSection.module.css
+++ b/src/components/AboutUs/IntroSection/introSection.module.css
@@ -99,3 +99,82 @@
     transform: translateX(0);
   }
 }
+
+/* Responsive */
+
+@media (max-width: 900px) {
+  .header {
+    h1 {
+      font-size: 48px;
+    }
+
+    h3 {
+      font-size: 30px;
+    }
+  }
+
+  .content {
+    h2 {
+      font-size: 20px;
+      span {
+        font-size: 44px;
+      }
+    }
+
+    p {
+      font-size: 20px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 24px;
+    align-items: center;
+  }
+
+  .content {
+    padding: 24px;
+    align-items: center;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .header {
+    flex-direction: column;
+    align-items: start;
+
+    h1 {
+      font-size: 40px;
+    }
+
+    h3 {
+      font-size: 24px;
+    }
+  }
+
+  .img {
+    height: 360px;
+    align-items: start;
+    overflow: hidden;
+  }
+
+  .content {
+    flex-direction: column;
+    align-items: start;
+
+    h2 {
+      font-size: 18px;
+      span {
+        font-size: 40px;
+      }
+    }
+
+    p {
+      font-size: 18px;
+      text-align: left;
+      width: 100%;
+    }
+  }
+}
