--- a/src/components/Footer/FooterTop/footerTop.module.css
+++ b/src/components/Footer/FooterTop/footerTop.module.css
@@ -100,3 +100,65 @@
   border-radius: 50%;
   transform: translateY(-28px);
 }
+
+@media (max-width: 768px) {
+  .btn_scoll {
+    top: auto;
+    bottom: 0;
+    transform: translateY(60px);
+  }
+
+  .container_top {
+    padding-right: 0;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .header {
+    width: 100%;
+  }
+
+  .content {
+    width: 100%;
+  }
+
+  .box {
+    width: 100%;
+
+    flex-direction: row;
+    justify-content: start;
+  }
+
+  .list_browse {
+    flex-direction: row;
+  }
+
+  .content_contact {
+    flex-direction: row;
+  }
+}
+
+@media (max-width: 615px) {
+  .container_top {
+    gap: 20px;
+  }
+
+  .header {
+    font-size: 30px;
+  }
+
+  .box {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .browse {
+    flex-direction: row;
+    font-size: 14px;
+  }
+
+  .contact {
+    flex-direction: row;
+    font-size: 14px;
+  }
+}
