--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -74,11 +74,14 @@
   cursor: pointer;
 }
 
+.sidebar {
+  display: none;
+}
+
 /* Responsive Styles */
-@media (max-width: 768px) {
+@media (max-width: 900px) {
   #header {
-    padding: 10px 20px;
-    justify-content: space-between;
+    height: 61px;
   }
 
   .feature {
@@ -106,11 +109,12 @@
   }
 
   .sidebar {
+    display: block;
     position: fixed;
     top: 0;
     left: -300px;
     height: 100%;
-    width: 300px;
+    width: 250px;
     background-color: rgba(79, 79, 79, 0.95);
     flex-direction: column;
     gap: 20px;
@@ -171,27 +175,16 @@
   }
 }
 
-@media (min-width: 769px) {
-  .burger_menu {
-    display: none;
+@media (max-width: 615px) {
+  #header {
+    padding: 24px;
   }
 
-  .sidebar {
-    display: none;
+  a {
+    font-size: 14px;
   }
-}
 
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 10000;
-}
-
-.overlay.active {
-  display: block;
+  p {
+    font-size: 14px;
+  }
 }
