--- a/src/components/Home/AboutUsSection/aboutUsSection.module.css
+++ b/src/components/Home/AboutUsSection/aboutUsSection.module.css
@@ -199,16 +199,19 @@
     font-size: 14px;
     line-height: 18px;
   }
+
+  .item {
+    padding: 12px 16px;
+  }
 }
 
 /* Responsive Styles */
 @media (max-width: 768px) {
   .container {
-    padding: 10px 20px;
+    padding: 12px 24px;
   }
 
   .box {
-    margin-top: -84px;
     text-align: center;
     padding: 10px;
   }
@@ -219,7 +222,7 @@
   }
 
   .sub {
-    font-size: 12px;
+    font-size: 14px;
     line-height: 16px;
   }
 
@@ -239,7 +242,6 @@
     flex: 1 1 100%;
     border-left: none;
     border-top: 1px solid #fffaf4;
-    padding: 12px 24px;
   }
 
   .line {
@@ -248,8 +250,16 @@
 }
 
 @media (max-width: 480px) {
+  .container {
+    background-position-x: 70%;
+  }
+
+  .screen {
+    left: -50px;
+  }
+
   .box {
-    margin-top: -28px;
+    top: 100px;
   }
 
   .header {
