--- a/src/components/Home/DifferenceSection/differenceSection.module.css
+++ b/src/components/Home/DifferenceSection/differenceSection.module.css
@@ -2,8 +2,7 @@
 
 .container {
   width: 100%;
-  padding: 48px;
-  margin-top: 60px;
+  padding: 100px 48px;
 
   display: flex;
   gap: 205px;
@@ -203,7 +202,6 @@
 
 @media (max-width: 1200px) {
   .container {
-    padding: 100px 48px 114px;
     flex-direction: column;
     gap: 80px;
     align-items: center;
@@ -218,7 +216,6 @@
 @media (max-width: 980px) {
   .container {
     height: auto;
-    padding: 100px 48px 114px;
     flex-direction: column;
     gap: 80px;
     align-items: center;
@@ -275,10 +272,15 @@
   }
 }
 
+@media (max-width: 768px) {
+  .container {
+    padding: 100px 24px 56px;
+  }
+}
 @media (max-width: 480px) {
   .container {
     gap: 32px;
-    padding: 100px 48px 56px;
+    padding: 70px 24px 56px;
   }
 
   .box_right {
