--- a/src/components/Home/FeatureSection/featureSection.module.css
+++ b/src/components/Home/FeatureSection/featureSection.module.css
@@ -1,8 +1,7 @@
 @import "../../../styles/variables.css";
 
 .container {
-  padding: 48px;
-  margin-top: 60px;
+  padding: 100px 48px;
 
   display: flex;
   flex-direction: column;
@@ -168,9 +167,7 @@
   .content {
     width: 100%;
   }
-}
 
-@media (max-width: 1024px) {
   .id {
     width: 40px;
     font-size: 12px;
@@ -181,9 +178,21 @@
   }
 }
 
+@media (max-width: 900px) {
+  .header {
+    h1 {
+      font-size: 30px;
+    }
+  }
+
+  .content {
+    font-size: 14px;
+  }
+}
+
 @media (max-width: 768px) {
   .container {
-    padding: 48px 48px 53px 48px;
+    padding: 100px 24px 56px;
   }
 
   .header {
@@ -217,6 +226,7 @@
 @media (max-width: 480px) {
   .container {
     gap: 12px;
+    padding: 70px 24px 56px;
   }
 
   .header {
