--- a/src/components/Solution/CustomerSection/Card/card.module.css
+++ b/src/components/Solution/CustomerSection/Card/card.module.css
@@ -70,3 +70,10 @@
 
   transform: translate(-50%, -50%);
 }
+
+@media (max-width: 480px) {
+  .card {
+    width: 200px;
+    height: 390px;
+  }
+}
