--- a/src/components/Solution/CustomerSection/customerSection.module.css
+++ b/src/components/Solution/CustomerSection/customerSection.module.css
@@ -1,7 +1,6 @@
 .container {
   width: 100%;
-  height: 100vh;
-  padding: 164px 48px;
+  padding: 100px 48px;
 
   display: flex;
   flex-direction: column;
@@ -39,7 +38,9 @@
   width: 100%;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 /* Animation up */
@@ -163,5 +164,69 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+/* Responsive */
+
+@media (max-width: 900px) {
+  .sub {
+    width: 100%;
+    font-size: 20px;
+  }
+
+  .header {
+    flex-direction: column;
+    align-items: start;
+    gap: 15px;
+
+    h1 {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 100px 24px;
+  }
+
+  .action_upImg_close {
+    transform: translateY(0);
+  }
+
+  @keyframes slideUpImg {
+    from {
+      transform: translateY(0);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes slideUpImgClose {
+    from {
+      transform: translateY(0);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    gap: 30px;
+    padding: 70px 48px 56px;
+  }
+
+  .header {
+    h1 {
+      font-size: 40px;
+    }
+  }
+
+  .sub {
+    font-size: 18px;
   }
 }
