--- a/src/components/atoms/Button/button.module.css
+++ b/src/components/atoms/Button/button.module.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  font-size: 1rem; /* Assuming heading9 size */
+  font-size: 1rem;
   color: var(--btn-color, var(--color-white));
 }
 
