--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -12,6 +12,7 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-snap-type: y proximity;
 }
 
 body {
@@ -25,6 +26,9 @@ body {
   height: 100%;
 }
 
+section {
+  scroll-snap-align: start;
+}
 a {
   text-decoration: none;
   color: inherit;
